[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynamocache"
version = "0.0.1"
authors = [
  { name="nic wanavit", email="nwanavit@hatari.cc" },
]
description = "a wrapper to cache into dynamodb"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/thanakijwanavit/pynamocache"
"Bug Tracker" = "https://github.com/thanakijwanavit/pynamocache/issues"